--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@json-editor/json-editor": "^2.5.1",
     "ace-builds": "^1.4.12",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.17.0",
