--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -38,11 +38,11 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "frontend/src/**/*.ts",
+    "frontend/src/**/*.tsx",
+    "frontend/src/**/*.vue",
+    "frontend/tests/**/*.ts",
+    "frontend/tests/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
