--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,7 +12,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json",
+    "project": "./tsconfig.json",
     "sourceType": "module",
     "ecmaVersion": 2020
   },
