--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -13,7 +13,7 @@ lint:
 	node_modules/.bin/vue-cli-service lint src/main.tsx
 
 install:
-	yarn --registry=https://registry.npm.taobao.org
+	yarn install --registry=https://registry.npm.taobao.org
 
 tar:
 	tar --exclude="dist/.DS_Store" -zcvf loganalysis-$(shell git describe --tags --long)-$(shell date "+%Y%m%d").tar.gz dist
