add nacos client

--- a/resources/ckman.yaml
+++ b/resources/ckman.yaml
@@ -1,6 +1,8 @@
 server:
   id: 1
-  ip: 0.0.0.0
+  bind: 0.0.0.0
+  # this ip will used to register nacos service
+  ip: 127.0.0.1
   port: 8808
   https: false
   pprof: true
@@ -19,3 +21,12 @@ prometheus:
     - 192.168.101.105:19090
   # second
   timeout: 10
+
+nacos:
+  enabled: true
+  hosts:
+    - 192.168.32.25
+  port: 8848
+  user_name: nacos
+  password: 0192023A7BBD73250516F069DF18B500
+  #namespace:
