fix #136, can't deploy cluster with public key when ckman is deployed by rpm

--- a/resources/ckman.service
+++ b/resources/ckman.service
@@ -4,6 +4,7 @@ Requires=network-online.target
 After=network-online.target
 
 [Service]
+Environment="HOME=%h"
 Type=forking
 Restart=always
 RestartSec=30
