--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,8 +1,8 @@
 # This Dockerfile is used for build a docker container to build ckman project which in Linux.
-# You can run command like: "docker build -f Dockerfile.build -t ckman-build:go-1.16 ."
-# the offical image is eoitek/ckman-build:go-1.16, You can pull it from dockerhub.
+# You can run command like: "docker build -f Dockerfile.build -t ckman-build:go-1.17 ."
+# the offical image is eoitek/ckman-build:go-1.17, You can pull it from dockerhub.
 
-FROM amd64/golang:1.16
+FROM amd64/golang:1.17
 
 WORKDIR /var/
 RUN apt-get update && apt-get install -y jq \
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y jq \
     && tar -xzvf nfpm_2.2.4_Linux_x86_64.tar.gz \
     && cp nfpm /usr/local/bin \
     && export GOPROXY=https://goproxy.io \
-    && go get github.com/markbates/pkger/cmd/pkger
+    && go install github.com/markbates/pkger/cmd/pkger@v0.17.1
 
 COPY frontend/package.json .
 RUN npm install
