--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
           # working-directory: somedir
 
           # Optional: golangci-lint command line arguments.
-          args: -D errcheck,govet
+          args: -D errcheck,govet,gosimple
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
