--- a/resources/ckman.yaml
+++ b/resources/ckman.yaml
@@ -31,7 +31,7 @@ log:
 #    database: ckman_db
 #  local:
 #    format: json
-#    config_dir: conf
+#    config_dir: /etc/ckman/conf
 #    config_file: clusters
 
 nacos:
