--- a/resources/ckman.yaml
+++ b/resources/ckman.yaml
@@ -1,3 +1,8 @@
+#  ckman config file
+# All password can be encrypt by ENC(xxxxxxxxx),
+# you can get encrypt password by using: ./ckman --encrypt 123456 to get password like: E310E892E56801CED9ED98AA177F18E6
+# If password not including by ENC(), that means it's a plaintext.
+
 server:
   id: 1
   port: 8808
@@ -27,7 +32,7 @@ log:
 #    port: 3306
 #    user: root
 #    # you can use ./ckman --encrypt 123456 to get password like: E310E892E56801CED9ED98AA177F18E6
-#    password: E310E892E56801CED9ED98AA177F18E6
+#    password: ENC(E310E892E56801CED9ED98AA177F18E6)
 #    # database must be created before start ckman
 #    database: ckman_db
 #  local:
@@ -41,5 +46,6 @@ nacos:
     - 127.0.0.1
   port: 8848
   user_name: nacos
-  password: A7561228101CB07938FAFF00C4444546
+  # you can use ./ckman --encrypt nacos to get password like: A7561228101CB07938FAFF00C4444546
+  password: ENC(A7561228101CB07938FAFF00C4444546)
   #namespace:
