--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -24,6 +24,8 @@ contents:
     dst: /usr/local/bin/ckmanpasswd
   - src: ./migrate
     dst: /usr/local/bin/migrate
+  - src: ./resource/yaml2json
+    dst: /usr/local/bin/yaml2json
   - src: ./README.md
     dst: /etc/ckman/package/README.md
   - src: ./resources/ckman.hjson
