--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -24,7 +24,7 @@ contents:
     dst: /usr/local/bin/ckmanpasswd
   - src: ./migrate
     dst: /usr/local/bin/migrate
-  - src: ./resource/yaml2json
+  - src: ./resources/yaml2json
     dst: /usr/local/bin/yaml2json
   - src: ./README.md
     dst: /etc/ckman/package/README.md
