chore: add ulimit in service

--- a/resources/ckman.service
+++ b/resources/ckman.service
@@ -11,6 +11,8 @@ Restart=always
 RestartSec=30
 RuntimeDirectory=ckman
 ExecStart=/usr/local/bin/ckman -c=/etc/ckman/conf/ckman.hjson -p=/run/ckman/ckman.pid -l=/var/log/ckman/ckman.log -d
+LimitCORE=infinity
+LimitNOFILE=500000
 
 [Install]
 WantedBy=multi-user.target
