feat: add tool znode_count to count zookeeper znode

--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -12,6 +12,8 @@ provides:
 - ckman
 - ckmanpasswd
 - migrate
+- znodefix
+- znode_count
 maintainer: "Zhichang Yu <yuzhichang@gmail.com>"
 description: |
   ckman is a tool which used to manage and monitor ClickHouse database
@@ -26,6 +28,8 @@ contents:
     dst: /usr/local/bin/migrate
   - src: ./znodefix
     dst: /usr/local/bin/znodefix
+  - src: ./znode_count
+    dst: /usr/local/bin/znode_count
   - src: ./resources/yaml2json
     dst: /usr/local/bin/yaml2json
   - src: ./README.md
