--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,12 +2,15 @@
 # You can run command like: "docker build -f Dockerfile.test -t ckman-clickhouse:centos-7 ."
 # the offical image is eoitek/ckman-clickhouse:centos-7, You can pull it from dockerhub.
 
-FROM centos:7
-
+#FROM centos:7
+FROM ccr.ccs.tencentyun.com/library/centos:7
 WORKDIR /var/
+
 RUN yum -y update && yum install -y openssh* \
-    && yum install -y epel-release && yum install -y jq \
+    && yum install -y epel-release && yum install -y jq net-tools nc vim \
     && yum install -y initscripts.x86_64 \
+    && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+    && echo 'Asia/Shanghai' >/etc/timezone \
     &&  echo '123456' |passwd --stdin root
 
 ENTRYPOINT /usr/sbin/init
