--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,98 @@
 version: "3"
 services:
-  zookeeper:
-    image: zookeeper:3.7.0
-    ports:
-      - "12181:2181"
-
-  cknode:
+  node1:
     image: eoitek/ckman-clickhouse:centos-7
+    hostname: node1
     privileged: true
-    deploy:
-      mode: replicated
-      replicas: 4
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.101
+    
+  node2:
+    image: eoitek/ckman-clickhouse:centos-7
+    hostname: node2
+    privileged: true
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.102
+  
+  node3:
+    image: eoitek/ckman-clickhouse:centos-7
+    hostname: node3
+    privileged: true
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.103
+
+  node4:
+    image: eoitek/ckman-clickhouse:centos-7
+    hostname: node4
+    privileged: true
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.104
+  
+  node5:
+    image: eoitek/ckman-clickhouse:centos-7
+    hostname: node5
+    privileged: true
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.105
+  
+  node6:
+    image: eoitek/ckman-clickhouse:centos-7
+    hostname: node6
+    privileged: true
+    extra_hosts:
+        - "node1:192.168.122.101"
+        - "node2:192.168.122.102"
+        - "node3:192.168.122.103"
+        - "node4:192.168.122.104"
+        - "node5:192.168.122.105"
+        - "node6:192.168.122.106"
+    networks:
+      extnetwork:
+        ipv4_address: 192.168.122.106
+
+networks:
+  extnetwork:
+    ipam:
+      config:
+        - subnet: 192.168.122.0/24
+          gateway: 192.168.122.1
