--- a/ci/k8s-ckman.yaml
+++ b/ci/k8s-ckman.yaml
@@ -51,7 +51,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ckman
-  namespace: housepower
+  namespace: ${K8S_NAMESPACE}
 spec:
   selector:
     app: ckman
@@ -66,7 +66,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ckman-config
-  namespace: housepower
+  namespace: ${K8S_NAMESPACE}
 data:
   ckman.yaml: |-
     server:
